16219
A reproduction scenario is attached. Run shell script {{compile.sh}} to demonstrate the problem.

Consider this Java class:
{code}
package org.example.java.outer;

// Declare a package private class in Java
class Outer {

  // Declare a public inner Interface
  public interface Inner {
    void foo();
  }
  
}
{code}

Accessing this interface from Scala correctly yields an error message when trying to import the interface.

This Scala code:
{code}
package org.example.scala.accessinner

import org.example.java.outer.Outer.Inner // <-- Offending line

class AccessInner(i: Inner)
{code}
results in this error message:
{code}
scalaProject1/org/example/scala/accessinner/AccessInner.scala:3: error: object Outer in package outer cannot be accessed in package org.example.java.outer
import org.example.java.outer.Outer.Inner
                              ^
{code}

But trying to extend the interface in Scala crashes the compiler:
{code}
package org.example.scala.accessinner

import org.example.java.outer.Outer

class AccessInner {
  class MyInner extends Outer.Inner // <-- Offending line
}
{code}

The stack trace produced is:
{code}
Exception in thread "main" scala.MatchError: <unknown tree of class class scala.tools.nsc.typechecker.Infer$Inferencer$AccessError> (of class scala.tools.nsc.typechecker.Infer$Inferencer$AccessError)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:454)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:537)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverseTrees$1.apply(Trees.scala:561)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverseTrees$1.apply(Trees.scala:561)
	at scala.collection.LinearSeqOptimized$class.foreach(LinearSeqOptimized.scala:59)
	at scala.collection.immutable.List.foreach(List.scala:45)
	at scala.reflect.generic.Trees$Traverser.traverseTrees(Trees.scala:561)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:489)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverse$2.apply$mcV$sp(Trees.scala:464)
	at scala.reflect.generic.Trees$Traverser.atOwner(Trees.scala:576)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:463)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.tools.nsc.ast.Trees$Traverser$$anonfun$traverseStats$1.apply(Trees.scala:928)
	at scala.tools.nsc.ast.Trees$Traverser$$anonfun$traverseStats$1.apply(Trees.scala:926)
	at scala.collection.LinearSeqOptimized$class.foreach(LinearSeqOptimized.scala:59)
	at scala.collection.immutable.List.foreach(List.scala:45)
	at scala.tools.nsc.ast.Trees$Traverser.traverseStats(Trees.scala:926)
	at scala.tools.nsc.ast.Trees$Traverser.traverseStats(Trees.scala:905)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:491)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverse$2.apply$mcV$sp(Trees.scala:464)
	at scala.reflect.generic.Trees$Traverser.atOwner(Trees.scala:576)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:463)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverseTrees$1.apply(Trees.scala:561)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverseTrees$1.apply(Trees.scala:561)
	at scala.collection.LinearSeqOptimized$class.foreach(LinearSeqOptimized.scala:59)
	at scala.collection.immutable.List.foreach(List.scala:45)
	at scala.reflect.generic.Trees$Traverser.traverseTrees(Trees.scala:561)
	at scala.reflect.generic.Trees$Traverser$$anonfun$traverse$1.apply$mcV$sp(Trees.scala:460)
	at scala.reflect.generic.Trees$Traverser.atOwner(Trees.scala:576)
	at scala.reflect.generic.Trees$Traverser.traverse(Trees.scala:459)
	at scala.tools.nsc.ast.Trees$Traverser.traverse(Trees.scala:920)
	at scala.tools.nsc.ast.Trees$FilterTreeTraverser.traverse(Trees.scala:1077)
	at scala.tools.nsc.ast.Trees$TreeOps.filter(Trees.scala:75)
	at scala.tools.nsc.symtab.classfile.Pickler$PicklePhase.apply(Pickler.scala:63)
	at scala.tools.nsc.Global$GlobalPhase$$anonfun$applyPhase$1.apply(Global.scala:326)
	at scala.tools.nsc.Global$GlobalPhase$$anonfun$applyPhase$1.apply(Global.scala:326)
	at scala.tools.nsc.reporters.Reporter.withSource(Reporter.scala:47)
	at scala.tools.nsc.Global$GlobalPhase.applyPhase(Global.scala:326)
	at scala.tools.nsc.Global$GlobalPhase$$anonfun$run$1.apply(Global.scala:294)
	at scala.tools.nsc.Global$GlobalPhase$$anonfun$run$1.apply(Global.scala:294)
	at scala.collection.Iterator$class.foreach(Iterator.scala:652)
	at scala.collection.mutable.ListBuffer$$anon$1.foreach(ListBuffer.scala:311)
	at scala.tools.nsc.Global$GlobalPhase.run(Global.scala:294)
	at scala.tools.nsc.Global$Run.compileSources(Global.scala:949)
	at scala.tools.nsc.Global$Run.compile(Global.scala:1034)
	at scala.tools.nsc.Main$.process(Main.scala:106)
	at scala.tools.nsc.Main$.main(Main.scala:123)
	at scala.tools.nsc.Main.main(Main.scala)
{code}
